--- a/src/Trade.Persistance/Trade.Persistance.csproj
+++ b/src/Trade.Persistance/Trade.Persistance.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Trade.Domain\Trade.Domain.csproj" />
+    <ProjectReference Include="..\Trade.Interfaces\Trade.Application.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
