--- a/src/Trade.Interfaces/Trade.Application.Interfaces.csproj
+++ b/src/Trade.Interfaces/Trade.Application.Interfaces.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Trade.Domain\Trade.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
