dependency injection application

--- a/src/Trade.Services.gRPC/Trade.Services.gRPC.csproj
+++ b/src/Trade.Services.gRPC/Trade.Services.gRPC.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Trade.Application.UseCases\Trade.Application.UseCases.csproj" />
+  </ItemGroup>
+
 </Project>
