grpc, other changes

--- a/src/Trade.Services.gRPC/appsettings.json
+++ b/src/Trade.Services.gRPC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=ANDRES\\SQLEXPRESS;Initial Catalog=TradeDb;User ID=sa;Password=Y0k0gawA_19929495;Trust Server Certificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
