--- a/src/Trade.Services.gRPC/Trade.Services.gRPC.csproj
+++ b/src/Trade.Services.gRPC/Trade.Services.gRPC.csproj
@@ -7,15 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <None Remove="Protos\order.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\order.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.65.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Trade.Application.UseCases\Trade.Application.UseCases.csproj" />
+    <ProjectReference Include="..\Trade.Persistance\Trade.Persistance.csproj" />
   </ItemGroup>
 
 </Project>
